--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,12 +51,18 @@ dependencies:
   flutter_html: ^3.0.0-alpha.3
   path_provider: ^2.1.1
   flutter_share: ^2.0.0
+  flutter_launcher_icons: ^0.13.1
   
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  remove_alpha_ios: true
+  image_path: "images/logo.png"
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
