--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: step
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -16,10 +16,10 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.1.0+1
+version: 1.2.0+1
 
 environment:
-  sdk: '>=3.1.2 <4.0.0'
+  sdk: ">=3.1.2 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,7 +31,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -40,10 +39,6 @@ dependencies:
   intl: ^0.18.1
   permission_handler: ^11.0.0
   file_picker: ^5.5.0
-  firebase_messaging: ^14.6.8
-  firebase_analytics: ^10.5.0
-  flutter_local_notifications: ^15.1.1
-  firebase_core: ^2.16.0
   cached_network_image: ^3.2.3
   notification_permissions: ^0.6.1
   google_fonts: ^6.1.0
@@ -51,9 +46,7 @@ dependencies:
   flutter_html: ^3.0.0-alpha.3
   path_provider: ^2.1.1
   flutter_share: ^2.0.0
-  flutter_launcher_icons: ^0.13.1
   flutter_app_badger: ^1.5.0
-  
 
 dev_dependencies:
   flutter_test:
@@ -76,7 +69,6 @@ flutter_launcher_icons:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
